# student-retention

./: LICENSE  README.md  app.py  pyproject.toml  users.json
.github/: copilot-instructions.md
architecture_diagrams/: 00_system_overview.py  01_data_flow_architecture.py  02_eda_process_flow.py  03_ml_pipeline_architecture.py  04_application_architecture.py  05_deployment_architecture.py  06_feature_engineering_pipeline.py  07_user_journey_flow.py  08_security_architecture.py  generate_all_diagrams.py
data/: Data_Dictionary.xlsx
diagrams/: create_architecture_diagram.py  create_mermaid_diagram.py  student_retention_architecture  student_retention_architecture.mmd  users
models/: feature_names.pkl  preprocessing_info.pkl  train_and_save_model.py
notebook/: predictive_analysis.ipynb
src/components/: form_components.py  prediction_components.py
src/config/: mappings.py  theme.py
src/utils/: auth.py  models_utils.py
